yuma123 (2.11) UNRELEASED; urgency=medium

  * Preliminary NMDA support draft-ietf-netmod-revised-datastores-09

 -- Vladimir Vassilev <vladimir@transpacket.com>  Thu, 11 Jan 2018 13:26:33 +0100

yuma123 (2.10) stable; urgency=medium

  * ncx
    - YANG 1.1 Xpath functions implementation.
    - Fixed bug in handling of deviations.
    - Fixed bug in apply_commit_deletes.
    - Fixed bug in val_make_serialized_string.
    - Refactored the base64 implementation. Fixed bugs and inconsistencies.
    - Added support for multiple obj callback registrations.
    - Fixed CDATA handling.
    - Splitted yuma-netconf.yang to yuma123-netconf.yang and yuma123-netconf-types.yang
    - Various ietf draft models updated. Erratas applied.
    - Removed circular libyumancx dependencies on libyumamgr
  * agt
    - Implementation of ietf-yang-library
    - Replaced proprietary notifications with the ietf-netconf-notifications.yang defined.
    - Moved agt_arp.c integrated module as standalone example-modules/yuma-arp
  * test
    - Added netconfd testsuite netconf/test/netconfd.
    - Added litenc client side session scripting python module.
  * yangcli
    - Implemented ietf-yang-library client side support.
    - Fixed bug caused by attempted reload of already loaded module.
    - Added yes/no container fill check promp.

 -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 29 Sep 2017 13:53:28 +0200

yuma123 (2.9) stable; urgency=medium

  * Removed IETF copyrighted MIBs to avoid the complications related to +dfsg releases
  * yangrpc API refactored for stability allowing new options passed as yangcli  parameter string
  * Added dump-session yangcli parameter

 -- Vladimir Vassilev <vladimir@transpacket.com>  Sat, 20 Aug 2016 11:46:34 +0200

yuma123 (2.8+dfsg) stable; urgency=medium

  * Removed IETF copyrighted MIBs and YANG models derived from them

 -- Vladimir Vassilev <vladimir@transpacket.com>  Sun, 07 Aug 2016 15:17:40 +0200

yuma123 (2.8) stable; urgency=medium
