@@ -1,8 +1,10 @@
 yuma123 (2.11) UNRELEASED; urgency=medium
 
   * Preliminary NMDA support draft-ietf-netmod-revised-datastores-09
+  * yangdump
+    - YANG tree format support draft-ietf-netmod-yang-tree-diagrams-04
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Thu, 11 Jan 2018 13:26:33 +0100
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Mon, 15 Jan 2018 19:47:56 +0100
 
 yuma123 (2.10) stable; urgency=medium
 
